--- a/software.html
+++ b/software.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oM9WafwL&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=n2HdpMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer - Cloud Data Platform - San Mateo, CA</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/info-stretch-corporation/job/oixMafwv'>Infostretch Corporation Careers - Senior Software Engineer (.Net)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
@@ -79,7 +83,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/software-engineer-intern---canada-1848934/?gh_src=82a8057f1'>Software Engineer Intern - Canada | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -107,7 +111,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer--authentication--1575126/?gh_src=82a8057f1'>Principal Software Engineer -Authentication | Okta</a></h5> 
+<h5><a href='https://www.okta.com/company/careers/engineering/principal-software-engineer--authentication--1575126/?gh_src=82a8057f1'>Principal Software Engineer -Authentication | Okta</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -187,7 +191,7 @@
 <p><span class="badge badge-light">Pune, India</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/tally/jobs/4502031002'>Job Application for Software Engineer In Test at Tally</a></h5> 
+<h5><a href='https://boards.greenhouse.io/tally/jobs/4502031002'>Job Application for Software Engineer In Test at Tally</a></h5> 
 <p><span class="badge badge-light">San Francisco Vancouver, British Columbia Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -235,7 +239,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
+<h5><a href='https://boards.greenhouse.io/dataminr/jobs/1937506'>Job Application for Software Engineer II, Front End at Dataminr</a></h5> 
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -351,7 +355,7 @@
 <p><span class="badge badge-light">Paris, France  Paris  Paris</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=ozBg8fwi&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nmONoMwC'>Guidewire Software, Inc. Careers - Senior Software Engineer ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -407,11 +411,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fivestars/jobs/1938252'>Job Application for Senior Software Engineering Manager at Fivestars</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fivestars/jobs/1938252'>Job Application for Senior Software Engineering Manager at Fivestars</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -434,10 +438,6 @@
 <h5><a href='https://jobs.lever.co/gloo/50eef7a5-aca1-49a2-b5aa-f1543192acf2'>Gloo - Senior Software Engineer</a></h5> 
 <p><span class="badge badge-light">Boulder Boulder, Colorado</span></p>
 <p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qHV9Vfwq&k=Job&j=oF9jbfw2&__jvst=Employee+Referral&__jvsd=s3e5bgwi&__jvsc=Twitter&bid=nW3EoMwi'>Jobvite, Inc. Careers - Senior Software Engineer (Platform)</a></h5> 
-<p><span class="badge badge-light">Indianapolis, IN</span></p>
-<p>Posted on:: 2019-10-30</p>
 <hr/>
 
 
